--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ serde_json = "1.0"
 regex = "1.5.5"
 lazy_static = "1.4.0"
 clap = { version = "3.1.18", features = ["derive"] }
+xml-rs = "0.8.4"
+tabled = "0.7.0"
